# exonum-cryptocurrency

./: README.md
cryptocurrency/: Cargo.toml  build.rs  exonum_walkthrough.md
cryptocurrency/examples/: demo.rs
cryptocurrency/src/: lib.rs
cryptocurrency/src/proto/: cryptocurrency.proto  mod.rs
cryptocurrency/tests/: tx_logic.rs
service_testing_walkthrough/: README.md
walkthrough/: README.md
