[package]
name = "cryptocurrency"
version = "0.1.0"
edition = "2018"
authors = ["Kirito raokarthik83@gmail.com"]

[dependencies]
exonum = "0.10.0"
exonum-derive = "0.10.0"
failure = "0.1.5"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
protobuf = "2.2.0"

[build-dependencies]
exonum-build = "0.10.0"

[dev-dependencies]
assert_matches = "1.3.0"
exonum-testkit = "0.10.2"
